Fix page container

--- a/client/src/pages/allOrders/OrderCard/OrderCard.scss
+++ b/client/src/pages/allOrders/OrderCard/OrderCard.scss
@@ -26,12 +26,14 @@
 }
 
 .order-card__section-header {
-    font-size: 1.14rem;
+    font-size: 1.8rem;
+    line-height: 2.4rem;
     color: rgba(0, 0, 0, 0.5);
 }
 
 .order-card__header {
-    font-size: 1.34rem;
+    font-size: 1.8rem;
+    line-height: 2.4rem;
     margin-top: 5px;
 }
 
@@ -43,12 +45,12 @@
 }
 
 .order-card__prop {
-    font-size: 1rem;
+    font-size: 1.5rem;
 }
 
 .order-card__prop-key {
     display: block;
-    font-size: 1rem;
+    font-size: 1.3rem;
     color: rgba(0, 0, 0, 0.5);
 }
 
