--- a/client/src/pages/pageHeader/PageHeader/PageHeader.scss
+++ b/client/src/pages/pageHeader/PageHeader/PageHeader.scss
@@ -3,5 +3,14 @@
     top: 0;
     left: 0;
     z-index: 2;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: white;
     padding: 0 2rem;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.08);
+
+    .ant-menu-horizontal {
+        margin-bottom: -1px;
+    }
 }
