--- a/client/src/pages/order/OrderPage/OrderPage.scss
+++ b/client/src/pages/order/OrderPage/OrderPage.scss
@@ -1,5 +1,13 @@
 .order-page {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    gap: 3rem;
+    display: flex;
+    gap: 4rem;
+}
+
+.order-page__left {
+
+}
+
+.order-page__right {
+    flex-grow: 1;
+    max-width: 40rem;
 }
