Add table with data in calls page

--- a/client/src/common/components/UTable/UTable.scss
+++ b/client/src/common/components/UTable/UTable.scss
@@ -10,9 +10,10 @@
 }
 
 .u-table-head-cell {
-
+    font-weight: bold;
+    padding: 0 1rem 1rem 0;
 }
 
 .u-table-cell {
-
+    padding: 0 1rem 1rem 0;
 }
