--- a/client/src/components/App/css/global.scss
+++ b/client/src/components/App/css/global.scss
@@ -1,10 +1,14 @@
 @use 'variables' as *;
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,500;0,600;0,700;0,800;0,900;1,400&display=swap');
 
 :root {
+	display: flex;
 	// Стандартный размер шрифта в браузере 16 пикселей.
 	// Поэтому 10 пикселей будет 62.5%.
 	// Размер в процентах указывается для слабовидящих у которых в браузере стоит увеличенный шрифт.
 	font-size: 62.5%;
+	width: 100%;
+	height: 100vh;
 }
 
 *:not(svg, g, path) {
@@ -18,6 +22,7 @@
 }
 
 body {
+	display: flex;
 	font-family: 'Manrope', Arial, sans-serif;
 	font-optical-sizing: auto;
 	font-weight: 500;
@@ -28,6 +33,15 @@ body {
 
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
+	width: 100%;
+	max-height: 100vh;
+}
+
+#root {
+	flex-grow: 1;
+	display: flex;
+	flex-direction: column;
+	height: 100vh;
 }
 
 a,
@@ -38,17 +52,6 @@ button {
 		outline: 1px solid $blueColor-2;
 	}
 }
-
-/*.link {
-	color: $orangeColor-2;
-	border-bottom: 1px solid rgba($orangeColor-2, .2);
-	transition: color .2s, border-bottom-color .2s;
-
-	&:hover {
-		color: saturate($orangeColor-2, 100%);
-		border-bottom-color: rgba($orangeColor-2, .35);
-	}
-}*/
 
 .mini-space {
 	font-size: 0.4em;
