--- a/client/src/pages/pageContainer/PageContainer/PageContainer.scss
+++ b/client/src/pages/pageContainer/PageContainer/PageContainer.scss
@@ -1,3 +1,7 @@
 .page-container {
-
+    flex-grow: 1;
+    overflow: auto;
+    width: 100%;
+    box-sizing: border-box;
+    padding: 2rem 3rem;
 }
