--- a/client/src/pages/pageContainer/PageContainer/PageContainer.scss
+++ b/client/src/pages/pageContainer/PageContainer/PageContainer.scss
@@ -5,3 +5,8 @@
     box-sizing: border-box;
     padding: 2rem 3rem;
 }
+
+.page-container__content {
+    max-width: 150rem;
+    margin: 0 auto;
+}
