--- a/client/src/common/components/UTable/UTable.scss
+++ b/client/src/common/components/UTable/UTable.scss
@@ -11,21 +11,29 @@
 .u-table-head-row--sticky {
     position: sticky;
     top: -2rem;
+    z-index: 2;
 }
 
 .u-table-head-cell {
     font-weight: bold;
-    padding: .5rem 1rem .5rem 0;
+    padding: .5rem;
     border-bottom: 1px solid rgba(0, 0, 0, 0.1);
 }
 
 .u-table-row {
+    border-radius: .4rem;
 
+    &:hover {
+        outline: 1px solid rgba(0, 0, 0, 0.1);
+    }
+}
+.u-table-row--selected {
+    background-color: #f1f3f4;
 }
 
 .u-table-cell {
     vertical-align: top;
-    padding: 1rem 1rem 0 0;
+    padding: .5rem;
 }
 .u-table-cell--left {
 
