--- a/client/src/pages/calls/CallsTable/CallsTable.scss
+++ b/client/src/pages/calls/CallsTable/CallsTable.scss
@@ -1,3 +1,11 @@
+@use '../../../components/App/css/variables' as *;
+
+.calls-table__date-wrapper {
+    display: flex;
+    gap: .5rem;
+    align-items: center;
+}
+
 .calls-table__zero-duration {
     color: #8f8f8f;
 }
@@ -19,5 +27,12 @@
 
 .calls-table__order-prefix {
     font-size: 1.3rem;
-    color: #6c6c6c;
+    color: darken($blueColor-2, 20%);
+}
+
+.calls-table__call-icon {
+    display: block;
+}
+.calls-table__call-button--disabled {
+    opacity: .4;
 }
