--- a/client/src/components/App/css/variables.scss
+++ b/client/src/components/App/css/variables.scss
@@ -1,4 +1,4 @@
-//$grayColor-1: rgb(240, 240, 240);
+$grayColor-1: #f1f3f4;
 //$grayColor-2: rgb(226, 226, 226);
 $textColor: rgb(30, 30, 30);
 //$blueColor-1: #dfeefb;
@@ -6,9 +6,9 @@ $blueColor-2: rgb(2, 109, 204);
 
 //$tablet-width: 600px;
 //$monitor-width: 1000px;
-//$max-page-width: 1300px;
+$max-page-width: 150rem;
 
-//$radius-1: 5px;
+$radius-1: 4px;
 
 //$topPanelHeight: 3.6rem;
 //$panelBlurStrength: 2rem;
