--- a/client/src/pages/calls/CallRecordPleer/CallRecordPleer.scss
+++ b/client/src/pages/calls/CallRecordPleer/CallRecordPleer.scss
@@ -1,3 +1,5 @@
+@use '../../../components/App/css/variables' as *;
+
 .call-record-player {
     position: fixed;
     left: 0;
@@ -12,7 +14,7 @@
     justify-content: space-between;
     align-items: center;
     gap: 2rem;
-    background-color: #f1f3f4;
+    background-color: $grayColor-1;
     width: 100%;
     max-width: 70rem;
     box-sizing: border-box;
