Create add employee modal

--- a/client/src/pages/staff/StaffPage/StaffPage.scss
+++ b/client/src/pages/staff/StaffPage/StaffPage.scss
@@ -1,3 +1,9 @@
 .staff-page {
 
 }
+
+.staff-page__add-employee-button-wrapper {
+    display: flex;
+    justify-content: flex-end;
+    margin-top: 2rem;
+}
