Updated order status type

--- a/client/src/pages/orders/OrderCard/OrderCard.scss
+++ b/client/src/pages/orders/OrderCard/OrderCard.scss
@@ -62,12 +62,18 @@
     background-color: #cbfdda;
 }
 .order-card__status--orange {
-    background-color: #fff0c2;
+    background-color: #ffe7c2;
 }
 .order-card__status--blue {
     background-color: #c9f3ff;
 }
 .order-card__status--gray {
     background-color: #cccccc;
+}
+.order-card__status--red {
+    background-color: #ffb7b7;
+}
+.order-card__status--yellow {
+    background-color: #fffeb7;
 }
 
