--- a/client/src/common/components/UTable/UTable.scss
+++ b/client/src/common/components/UTable/UTable.scss
@@ -1,7 +1,6 @@
 @use '../../../components/App/css/variables' as *;
 
 .u-table {
-
 }
 .u-table--block {
     width: 100%;
@@ -45,4 +44,7 @@
 }
 .u-table-cell--right {
     text-align: right;
+}
+.u-table-cell--no-wrap {
+    white-space: nowrap;
 }
