--- a/client/src/pages/orders/OrdersTable/OrdersTable.scss
+++ b/client/src/pages/orders/OrdersTable/OrdersTable.scss
@@ -6,20 +6,20 @@
     border-radius: 2px;
 }
 .order-table__status--green {
-    background-color: #dbffe6;
+    background-color: #e0efe1;
 }
 .order-table__status--orange {
-    background-color: #ffecd1;
+    background-color: #f8e8dd;
 }
 .order-table__status--blue {
-    background-color: #d6f4ff;
+    background-color: #def0f8;
 }
 .order-table__status--gray {
     background-color: #dddddd;
 }
 .order-table__status--red {
-    background-color: #ffe1e1;
+    background-color: #fbe6e6;
 }
 .order-table__status--yellow {
-    background-color: #fffec7;
+    background-color: #f3f2cb;
 }
