--- a/client/src/pages/nomenclature/spareParts/SparePartsPage/SparePartsPage.scss
+++ b/client/src/pages/nomenclature/spareParts/SparePartsPage/SparePartsPage.scss
@@ -1,8 +1,8 @@
-.printers-page {
+.spare-parts-page {
 
 }
 
-.printers-page__add-printer-button-wrapper {
+.spare-parts-page__add-spare-parts-button-wrapper {
     display: flex;
     justify-content: flex-end;
     margin-top: 2rem;
