--- a/client/src/components/App/css/global.scss
+++ b/client/src/components/App/css/global.scss
@@ -59,6 +59,7 @@ button {
 
 .link {
 	color: $blueColor-2;
+	cursor: pointer;
 	border-bottom: 1px solid rgba($blueColor-2, .2);
 	transition: border-bottom 0.2s;
 
