Add calls in Order page

--- a/client/src/features/calls/CallsRoot/CallsRoot.scss
+++ b/client/src/features/calls/CallsRoot/CallsRoot.scss
@@ -1,15 +1,15 @@
-.calls-page {
+.calls {
 
 }
 
-.calls-page__top {
+.calls__top {
     display: flex;
     justify-content: left;
     gap: 3rem;
     padding-bottom: .7rem;
 }
 
-.calls-page__table {
+.calls__table {
     position: relative;
     margin-top: 2rem;
 }
